--- a/resume.html
+++ b/resume.html
@@ -152,6 +152,10 @@ permalink: /resume.html
     }
 
     @media print {
+      * {
+        font-size: 13px;
+      }
+
       body {
         transform: scale(90%);
         width: 100%;
@@ -159,6 +163,7 @@ permalink: /resume.html
         margin: auto;
         padding: 0;
         background-color: #ffff;
+        color: #000 !important;
       }
 
       main {
@@ -172,10 +177,70 @@ permalink: /resume.html
       }
 
       span.print-separator {
-        page-break-before: always;
         display: block;
-        padding: 16px;
+        padding-bottom: 16px;
       }
+
+      main {
+        padding: 10px;
+        background: #fff;
+        box-shadow: none;
+      }
+
+      section {
+        margin-bottom: 10px;
+      }
+
+      h1,
+      h2,
+      h3 {
+        margin-bottom: 10px;
+        font-weight: 600;
+      }
+
+      h1 {
+        font-size: 28px;
+      }
+
+      h2 {
+        font-size: 20px;
+      }
+
+      h3 {
+        font-size: 18px;
+      }
+
+      p {
+        margin-bottom: 10px;
+      }
+
+      ul {
+        margin-bottom: 10px;
+        padding-left: 16px;
+        list-style-type: disc;
+      }
+
+      li {
+        margin-bottom: 2px;
+      }
+
+      dl {
+        margin-bottom: 10px;
+      }
+
+      dd {
+        margin-left: 10px;
+      }
+
+      dl.inline {
+        gap: 8px 16px;
+      }
+
+      div {
+        margin-bottom: 10px;
+        padding: 8px;
+      }
+
     }
   </style>
 </head>
@@ -189,8 +254,7 @@ permalink: /resume.html
           <strong>Computer Science Bachelor by the University of Porto</strong>
         </p>
         <p class="extra">
-          Software Developer passionate about problem-solving! Inspired by beautifully designed and implementated
-          systems.
+          Software Developer passionate about problem-solving! Inspired by beautifully designed and implemented systems.
         </p>
       </div>
       <div class="right">
@@ -224,7 +288,7 @@ permalink: /resume.html
           <h3>Programming Languages</h3>
           <ul>
             <li>Python</li>
-            <li>Javascript</li>
+            <li>JavaScript</li>
             <li>HTML/CSS</li>
             <li>C</li>
             <li>SQL</li>
@@ -270,15 +334,14 @@ permalink: /resume.html
               </dd>
             </span>
             <span class="group">
-              <dt>Full-Satck Developer</dt>
+              <dt>Full-Stack Developer</dt>
               <dd>
                 <p>Ad. Evolutio (March 2022 - September 2023)</p>
                 <ul>
                   <li>
                     Complete development of Django-based application from client's specification, including data
-                    modelling,
-                    validation of business logic, integration with external services, integration with usecase-specific
-                    frameworks, and more.
+                    modelling, validation of business logic, integration with external services, integration with use
+                    case-specific frameworks, and more.
                   </li>
                   <li>
                     Design and development of Django reusable apps.
@@ -290,7 +353,7 @@ permalink: /resume.html
               </dd>
             </span>
             <span class="group">
-              <dt>Intership</dt>
+              <dt>Internship</dt>
               <dd>
                 <p>Ad. Evolutio (October 2021 - March 2022)</p>
                 <ul>
@@ -299,8 +362,8 @@ permalink: /resume.html
                     Certification Authority.
                   </li>
                   <li>
-                    Secondary project of development of a payment plugin for the Pretix open-source
-                    ticketing system, in partnership with SIBS.
+                    Secondary project of development of a payment plugin for the Pretix open-source ticketing system, in
+                    partnership with SIBS.
                   </li>
                 </ul>
               </dd>
@@ -327,8 +390,8 @@ permalink: /resume.html
                 </ul>
               </dd>
             </span>
-            <span class="print-separator"></span>
             <span class="group">
+              <span class="print-separator"></span>
               <dt>Programmer <span class="separator">of</span> TamanduTech Robotics Team</dt>
               <dd>
                 <p>Federal University of ABC (September 2018 - June 2019)</p>
@@ -395,7 +458,7 @@ permalink: /resume.html
             </span>
             <span class="group">
               <dt>
-                HighSchool Degree
+                American High School Degree
               </dt>
               <dd>
                 <p>University of Missouri & Fénix High School of Guaratinguetá (February 2015 - December 2017)</p>
