resume: improve for smaller screen and increase break point

--- a/portuguese-resume.html
+++ b/portuguese-resume.html
@@ -134,7 +134,9 @@ permalink: /portuguese-resume.html
     }
 
     .right {
-      background-color: #ffffff;
+      background-color: #fff;
+      border-top: 2px solid #ccc;
+      border-bottom: 0.1px solid #fff;
     }
 
     .site-only {
@@ -145,7 +147,7 @@ permalink: /portuguese-resume.html
       display: none;
     }
 
-    @media (min-width: 600px) {
+    @media (min-width: 800px) {
       .container {
         flex-direction: row;
       }
@@ -157,6 +159,7 @@ permalink: /portuguese-resume.html
       .right {
         width: 70%;
         border-left: 2px solid #ccc;
+        border-top: none;
       }
     }
 
