--- a/resume.html
+++ b/resume.html
@@ -135,7 +135,9 @@ permalink: /resume.html
     }
 
     .right {
-      background-color: #ffffff;
+      background-color: #fff;
+      border-top: 2px solid #ccc;
+      border-bottom: 0.1px solid #fff;
     }
 
     .site-only {
@@ -146,7 +148,7 @@ permalink: /resume.html
       display: none;
     }
 
-    @media (min-width: 600px) {
+    @media (min-width: 800px) {
       .container {
         flex-direction: row;
       }
@@ -158,6 +160,7 @@ permalink: /resume.html
       .right {
         width: 70%;
         border-left: 2px solid #ccc;
+        border-top: none;
       }
     }
 
