--- a/index.html
+++ b/index.html
@@ -28,6 +28,17 @@
             margin: 0 auto;
             padding: 10px;
         }
+
+        blockquote {
+            opacity: .8;
+            margin: 10px 0;
+            padding: 0 10px ;
+            border-left: 2px solid #7069;
+        }
+
+        h1 {
+            padding-top: 20px;
+        }
     </style>
 </head>
 
@@ -35,23 +46,35 @@
 
     <header>
         <div class="container">
-            <h1>Murilo's Pink Space 🧠</h1>
+            <h2>Murilo's Pink Space 🧠</h2>
         </div>
     </header>
 
     <main class="container">
+        <!-- NOTICE -->
+        <blockquote>
+            <p>This site is still under development, so please be patient!</p>
+            <p>In the meanwhile,
+                <a href="https://drive.google.com/file/d/1bpDETshnO8NLp3tG60uS14RyiNTybjqY/view?usp=sharing">here</a> is
+                my
+                CV. You can also find me on
+                <a href="https://github.com/mrmurilo75/">GitHub</a>, or
+                <a href="https://www.linkedin.com/in/murilo-r-630161123/">LinkedIn</a>.</a>
+            </p>
+        </blockquote>
+        <!-- END OF NOTICE -->
+
+        <h1>Welcome!</h1>
         <p>
             My name is <strong>Murilo Rosa</strong> and this is my personal space on the web. Here you'll find notes and
             reference
             that I use for my research and projects.
         </p>
-        <p>This site is still under development, so please be patient!</p>
-        <p>In the meanwhile,
-            <a href="https://drive.google.com/file/d/1bpDETshnO8NLp3tG60uS14RyiNTybjqY/view?usp=sharing">here</a> is my
-            CV. You can also find me on
-            <a href="https://github.com/mrmurilo75/">GitHub</a>, or
-            <a href="https://www.linkedin.com/in/murilo-r-630161123/">LinkedIn</a>.</a>
-        </p>
+        <br>
+        <h2>About me</h2>
+        <p>I'm a <strong>logician</strong> at heart! I came to Portugal to acquire a Bachelor's Degree in
+            <strong>Computer Science</strong>. As a Software Developer, I've mainly used <strong>Python</strong>. Now I am pursuing a
+            Master's in Finance, aiming to work within <strong>Quantitative Finance</strong>.</p>
     </main>
 
     <script>
